Remove unused file
Former-commit-id: 800fe8ab814d9bd0a1673d51975081bd69c38665

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
     <body>
         <my-app>Loading...</my-app>
         <script>
-            System.import('app').catch(function(err){ console.error(err);  });
+            System.import('app').catch(function(err){ console.log(err);  });
         </script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
